--- a/index.html
+++ b/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>App-Template</title>
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="icon/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Honey Warma</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="container-top">
+            <nav>
+                <img src="img/119707236_123919612764516_7151588668004480226_n.png" alt="">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Pages</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li class="btn">
+                        <div>
+                            <a href="#">
+                                <span class="icon-search"></span>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <span class="icon-shopping-cart"></span>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="btn-get">
+                        <a href="">GET IN TOUCH</a>
+                    </li>
+                </ul>
+            </nav>
+            <div>
+                <div class="txt">
+                    <h3>High Quality of Honey</h3>
+                    <h4>Black Seed Sidr Honey from Spain</h4>
+                    <ul>
+                        <li>It comes with a distinctive taste</li>
+                        <li>Its leaves are rich in nutrients such as iron</li>
+                        <li>1 kg Blackseed Sidr Honey approximately</li>
+                    </ul>
+                <a href="">DISCOVER MORE</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
