--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="icon/style.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/estilos.css">
     <title>Honey Warma</title>
 </head>
 <body>
@@ -50,5 +51,101 @@
             </div>
         </div>
     </div>
+
+    <main>
+        <section class="layout-1">
+            <div class="container">
+                <div class="diferentes-tipos">
+                    <div class="dis">Whine Choose Us</div>
+                    <h2>Different Types Of Honey</h2>
+                    <div class="effect"></div>
+                </div>
+
+                <div class="row">
+                    <div class="items-tipos">
+                        <div class="contenedor-figure">
+                            <div class="item-img">
+                                <img src="src/img/icon-box-1.svg" alt="100% Natural">
+                            </div>
+                            <div class="item-text">
+                                <h3>100% Natural</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items-tipos">
+                        <div class="contenedor-figure">
+                            <div class="item-img">
+                                <img src="src/img/icon-box-2.svg" alt="25y Experience">
+                            </div>
+                            <div class="item-text">
+                                <h3>25y Experience</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items-tipos">
+                        <div class="contenedor-figure">
+                            <div class="item-img">
+                                <img src="src/img/icon-box-3.svg" alt="Shop Online">
+                            </div>
+                            <div class="item-text">
+                                <h3>Shop Online</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items-tipos">
+                        <div class="contenedor-figure">
+                            <div class="item-img">
+                                <img src="src/img/icon-box-4.svg" alt="High Quality">
+                            </div>
+                            <div class="item-text">
+                                <h3>Hight Quality</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items-tipos">
+                        <div class="contenedor-figure">
+                            <div class="item-img">
+                                <img src="src/img/icon-box-5.svg" alt="Creamed Honey">
+                            </div>
+                            <div class="item-text">
+                                <h3>Creamed Honey</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="items-tipos">
+                        <div class="contenedor-figure">
+                            <div class="item-img">
+                                <img src="src/img/icon-box-6.svg" alt="High Quality">
+                            </div>
+                            <div class="item-text">
+                                <h3>Hight Quality</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="layout-2">
+            <div class="container">
+                <div class="row">
+                    <div class="lo-mejor-salud">
+                        <img src="src/img/about-img-1.png" alt="lo-mejor-salud-abejas">
+                    </div>
+                    <div class="lo-mejor-salud">
+                        <div class="about-block transate-center">
+                            <div class="dis">High Quality!</div>
+                            <h3>The best for your Health from our bees</h3>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                            </p>
+                            <a href="#">Discover More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
