--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="src/img/icon-box-1.svg" alt="100% Natural">
+                                <img src="assets/img/icon-box-1.svg" alt="100% Natural">
                             </div>
                             <div class="item-text">
                                 <h3>100% Natural</h3>
@@ -75,7 +75,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="src/img/icon-box-2.svg" alt="25y Experience">
+                                <img src="assets/img/icon-box-2.svg" alt="25y Experience">
                             </div>
                             <div class="item-text">
                                 <h3>25y Experience</h3>
@@ -85,7 +85,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="src/img/icon-box-3.svg" alt="Shop Online">
+                                <img src="assets/img/icon-box-3.svg" alt="Shop Online">
                             </div>
                             <div class="item-text">
                                 <h3>Shop Online</h3>
@@ -95,7 +95,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="src/img/icon-box-4.svg" alt="High Quality">
+                                <img src="assets/img/icon-box-4.svg" alt="High Quality">
                             </div>
                             <div class="item-text">
                                 <h3>Hight Quality</h3>
@@ -105,7 +105,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="src/img/icon-box-5.svg" alt="Creamed Honey">
+                                <img src="assets/img/icon-box-5.svg" alt="Creamed Honey">
                             </div>
                             <div class="item-text">
                                 <h3>Creamed Honey</h3>
@@ -115,7 +115,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="src/img/icon-box-6.svg" alt="High Quality">
+                                <img src="assets/img/icon-box-6.svg" alt="High Quality">
                             </div>
                             <div class="item-text">
                                 <h3>Hight Quality</h3>
@@ -130,7 +130,7 @@
             <div class="container">
                 <div class="row">
                     <div class="lo-mejor-salud">
-                        <img src="src/img/about-img-1.png" alt="lo-mejor-salud-abejas">
+                        <img src="assets/img/about-img-1.png" alt="lo-mejor-salud-abejas">
                     </div>
                     <div class="lo-mejor-salud">
                         <div class="about-block transate-center">
