--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="icon/style.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="assets/css/estilos.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>Honey Warma</title>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="container-top">
             <nav>
                 <img src="img/119707236_123919612764516_7151588668004480226_n.png" alt="">
@@ -50,7 +51,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <main>
         <section class="layout-1">
@@ -65,7 +66,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="assets/img/icon-box-1.svg" alt="100% Natural">
+                                <img loading="lazy" src="assets/img/icon-box-1.svg" alt="100% Natural">
                             </div>
                             <div class="item-text">
                                 <h3>100% Natural</h3>
@@ -75,7 +76,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="assets/img/icon-box-2.svg" alt="25y Experience">
+                                <img loading="lazy" src="assets/img/icon-box-2.svg" alt="25y Experience">
                             </div>
                             <div class="item-text">
                                 <h3>25y Experience</h3>
@@ -85,7 +86,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="assets/img/icon-box-3.svg" alt="Shop Online">
+                                <img loading="lazy" src="assets/img/icon-box-3.svg" alt="Shop Online">
                             </div>
                             <div class="item-text">
                                 <h3>Shop Online</h3>
@@ -95,7 +96,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="assets/img/icon-box-4.svg" alt="High Quality">
+                                <img loading="lazy" src="assets/img/icon-box-4.svg" alt="High Quality">
                             </div>
                             <div class="item-text">
                                 <h3>Hight Quality</h3>
@@ -105,7 +106,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="assets/img/icon-box-5.svg" alt="Creamed Honey">
+                                <img loading="lazy" src="assets/img/icon-box-5.svg" alt="Creamed Honey">
                             </div>
                             <div class="item-text">
                                 <h3>Creamed Honey</h3>
@@ -115,7 +116,7 @@
                     <div class="items-tipos">
                         <div class="contenedor-figure">
                             <div class="item-img">
-                                <img src="assets/img/icon-box-6.svg" alt="High Quality">
+                                <img loading="lazy" src="assets/img/icon-box-6.svg" alt="High Quality">
                             </div>
                             <div class="item-text">
                                 <h3>Hight Quality</h3>
@@ -130,7 +131,7 @@
             <div class="container">
                 <div class="row">
                     <div class="lo-mejor-salud">
-                        <img src="assets/img/about-img-1.png" alt="lo-mejor-salud-abejas">
+                        <img loading="lazy" src="assets/img/about-img-1.png" alt="lo-mejor-salud-abejas">
                     </div>
                     <div class="lo-mejor-salud">
                         <div class="about-block transate-center">
@@ -146,6 +147,76 @@
             </div>
         </section>
 
+        <section class="layout-1">
+            <div class="container">
+                <div class="diferentes-tipos">
+                    <div class="dis">Our Blog</div>
+                    <h2>Official Blog Updates</h2>
+                    <div class="effect"></div>
+                </div>
+
+                <div class="row">
+                    <div class="items-card">
+                        <div class="contenedor-card">
+                            <div class="card-img">
+                                <img loading="lazy" src="assets/img/blog-4.jpg" alt="How Gender Equality Improves Business" >
+                                <div class="icon-card">
+                                    <span>21</span>
+                                    <span>Apr</span>
+                                </div>
+                            </div>
+                            <div class="text-card">
+                                <a href="#" class="text-sub"><i class="bx bxs-folder-open"></i>Bonds & Commodities</a>
+                                <a href="#"><h3>How Gender Equality Improves Business</h3></a>
+                                <p>Varius lobortis, at et, morbi massa at praesent lectus, leo diam. Sodales nulla, diam ante ac ac eleifend, nunc...</p>
+                                <a href="#" class="read-more">
+                                    <i class='bx bxs-chevron-right'></i>READ MORE  </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="items-card">
+                        <div class="contenedor-card">
+                            <div class="card-img">
+                                <img src="assets/img/blog-5.jpg" alt="">
+                                <div class="icon-card">
+                                    <span>21</span>
+                                    <span>Apr</span>
+                                </div>
+                            </div>
+                            <div class="text-card">
+                                <a href="#" class="text-sub"><i class="bx bxs-folder-open"></i>Bonds & Commodities</a>
+                                <a href="#"><h3>How Gender Equality Improves Business</h3></a>
+                                <p>Varius lobortis, at et, morbi massa at praesent lectus, leo diam. Sodales nulla, diam ante ac ac eleifend, nunc...</p>
+                                <a href="#" class="read-more">
+                                    <i class='bx bxs-chevron-right'></i>READ MORE  </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="items-card">
+                        <div class="contenedor-card">
+                            <div class="card-img">
+                                <img src="assets/img/blog-6.jpg" alt="">
+                                <div class="icon-card">
+                                    <span>21</span>
+                                    <span>Apr</span>
+                                </div>
+                            </div>
+                            <div class="text-card">
+                                <a href="#" class="text-sub"><i class="bx bxs-folder-open"></i>Bonds & Commodities</a>
+                                <a href="#"><h3>How Gender Equality Improves Business</h3></a>
+                                <p>Varius lobortis, at et, morbi massa at praesent lectus, leo diam. Sodales nulla, diam ante ac ac eleifend, nunc...</p>
+                                <a href="#" class="read-more">
+                                    <i class='bx bxs-chevron-right'></i>READ MORE  </a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
+
 </body>
 </html>
