--- a/index.html
+++ b/index.html
@@ -11,47 +11,48 @@
     <title>Honey Warma</title>
 </head>
 <body>
-    <!-- <div class="container">
-        <div class="container-top">
-            <nav>
-                <img src="img/119707236_123919612764516_7151588668004480226_n.png" alt="">
+    <div class="container-top">
+        <nav>
+            <img src="img/119707236_123919612764516_7151588668004480226_n.png" alt="">
+            <ul class="scroll-ul">
+                <li><a href="">Home</a></li>
+                <li><a href="">Pages</a></li>
+                <li><a href="">Shop</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li class="btn">
+                    <div>
+                        <a href="#">
+                            <span class="icon-search"></span>
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <span class="icon-shopping-cart"></span>
+                        </a>
+                    </div>
+                </li>
+                <li class="btn-get">
+                    <a href="">GET IN TOUCH</a>
+                </li>
+            </ul>
+            <div class="btn-nav">
+                <span class="icon-align-justify"></span>
+            </div>
+        </nav>
+        <div>
+            <div class="txt">
+                <h3>High Quality of Honey</h3>
+                <h4>Black Seed Sidr Honey from Spain</h4>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Pages</a></li>
-                    <li><a href="">Shop</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact Us</a></li>
-                    <li class="btn">
-                        <div>
-                            <a href="#">
-                                <span class="icon-search"></span>
-                            </a>
-                        </div>
-                        <div>
-                            <a href="#">
-                                <span class="icon-shopping-cart"></span>
-                            </a>
-                        </div>
-                    </li>
-                    <li class="btn-get">
-                        <a href="">GET IN TOUCH</a>
-                    </li>
+                    <li>It comes with a distinctive taste</li>
+                    <li>Its leaves are rich in nutrients such as iron</li>
+                    <li>1 kg Blackseed Sidr Honey approximately</li>
                 </ul>
-            </nav>
-            <div>
-                <div class="txt">
-                    <h3>High Quality of Honey</h3>
-                    <h4>Black Seed Sidr Honey from Spain</h4>
-                    <ul>
-                        <li>It comes with a distinctive taste</li>
-                        <li>Its leaves are rich in nutrients such as iron</li>
-                        <li>1 kg Blackseed Sidr Honey approximately</li>
-                    </ul>
-                <a href="">DISCOVER MORE</a>
-                </div>
+            <a href="">DISCOVER MORE</a>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <main>
         <section class="layout-1">
@@ -217,6 +218,37 @@
             </div>
         </section>
     </main>
-
+    <div class="container-footer">
+        <div class="container-footer-contact">
+            <ul>
+                <li><a href=""><span class="icon-facebook"></span></a></li>
+                <li><a href=""><span class="icon-twitter"></span></a></li>
+                <li><a href=""><span class="icon-instagram"></span></a></li>
+                <li><a href=""><span class="icon-youtube"></span></a></li>
+                <li><a href=""><span class="icon-whatsapp"></span></a></li>
+            </ul>
+            <div class="logo">
+                <a href="#">
+                    <img src="img/119707236_123919612764516_7151588668004480226_n.png" alt="">
+                </a>
+            </div>
+            <div class="locate">
+                <a href="#">
+                    <span class="icon-mail"></span>
+                    <h2>info@example.com</h2>
+                </a>
+                <a href="#">
+                    <span class="icon-map-pin"></span>
+                    <h2>New York - NY, 70085</h2>
+                </a>
+                <a href="#">
+                    <span class="icon-phone"></span>
+                    <h2>00249 123 333 719</h2>
+                </a>
+            </div>
+            <h1>© 2021 niletheme. All Rights Reserved With Love by Nile Theme</h1>
+        </div>
+    </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
